02.Api project setup, AspNetCore Identity added

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=IdentityApp;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
+  "JWT": {
+    "Key": "nODgY1z1xiYvUTmUQ6L9lz5R19AQaVnY",
+    "ExpiresInDays": "15",
+    "Issuer": "http://localhost:5234"
   }
 }
